# urchin

./: .gitignore  .urchinignore.example  AGENTS.md  CHANGELOG.md  CONNECTORS.md  Cargo.toml  DEV.md  EVENTS.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SOVEREIGNTY.md  index.mdx  mint.json
.cursor/: mcp.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/urchin-agent/: Cargo.toml
crates/urchin-agent/src/: context.rs  lib.rs  reasoner.rs  reflect.rs  semantic.rs
crates/urchin-cli/: Cargo.toml
crates/urchin-cli/src/: main.rs
crates/urchin-collectors/: Cargo.toml
crates/urchin-collectors/src/: apple_health.rs  bank_csv.rs  calendar.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  git.rs  google_takeout.rs  lib.rs  local_model.rs  opencode.rs  shell.rs  state.rs
crates/urchin-core/: Cargo.toml
crates/urchin-core/src/: config.rs  ephemeral.rs  event.rs  governance.rs  identity.rs  index.rs  journal.rs  lib.rs  query.rs
crates/urchin-intake/: Cargo.toml
crates/urchin-intake/src/: lib.rs  server.rs
crates/urchin-mcp/: Cargo.toml
crates/urchin-mcp/src/: lib.rs  server.rs  tools.rs
crates/urchin-sdk/: Cargo.toml
crates/urchin-sdk/src/: builder.rs  client.rs  lib.rs
crates/urchin-vault/: Cargo.toml
crates/urchin-vault/src/: contract.rs  lib.rs  projection.rs  writer.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  MINTLIFY_OUTLINE.md
public_docs/: api-reference.mdx  index.mdx  mint.json
public_docs/urchin/api/: mcp-project-context.mdx
public_docs/urchin/cli/: collect.mdx  mcp.mdx  serve.mdx
public_docs/urchin/collectors/: shell.mdx
public_docs/urchin/configuration/: environment-variables.mdx
public_docs/urchin/integrations/: claude-code.mdx
systemd/: urchin.env.example  urchin.service
urchin/: how-it-works.mdx  introduction.mdx  quickstart.mdx
urchin/api/: http-health.mdx  http-ingest.mdx  mcp-ephemeral.mdx  mcp-ingest.mdx  mcp-overview.mdx  mcp-project-context.mdx  mcp-recent-activity.mdx  mcp-remember.mdx  mcp-search.mdx  mcp-status.mdx  mcp-workspace-context.mdx
urchin/cli/: collect.mdx  config.mdx  doctor.mdx  ingest.mdx  mcp.mdx  pull.mdx  query.mdx  rebuild-index.mdx  recent.mdx  serve.mdx  sync.mdx  vault.mdx
urchin/collectors/: apple-health.mdx  bank-csv.mdx  calendar.mdx  git.mdx  google-takeout.mdx  overview.mdx  shell.mdx
urchin/configuration/: config-file.mdx  environment-variables.mdx
urchin/integrations/: claude-code.mdx  http.mdx  vscode.mdx  zed.mdx
