[package]
name    = "urchin-agent"
version = "0.3.4"
edition = "2021"
description = "ReAct scaffold: load journal context, reason, emit agent events back to the substrate."

[dependencies]
urchin-core = { path = "../urchin-core" }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
ureq        = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
