[package]
name    = "urchin-cli"
version = "0.3.4"
edition = "2021"

[[bin]]
name = "urchin"
path = "src/main.rs"

[dependencies]
urchin-core       = { path = "../urchin-core" }
urchin-intake     = { path = "../urchin-intake" }
urchin-mcp        = { path = "../urchin-mcp" }
urchin-collectors = { path = "../urchin-collectors" }
urchin-sdk        = { path = "../urchin-sdk" }
tokio             = { workspace = true }
clap              = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
chrono            = { workspace = true }
