[package]
name    = "urchin-collectors"
version = "0.3.4"
edition = "2021"

[dependencies]
urchin-core = { path = "../urchin-core" }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
notify      = { workspace = true }
dirs        = { workspace = true }
chrono      = { workspace = true }
rusqlite    = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
