[package]
name    = "urchin-core"
version = "0.3.4"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
dirs        = { workspace = true }
toml        = { workspace = true }

[dev-dependencies]
tempfile = "3"
