[package]
name    = "urchin-core"
version = "0.3.4"
edition = "2021"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
dirs        = { workspace = true }
toml        = { workspace = true }
rusqlite    = { workspace = true }

[dev-dependencies]
tempfile = "3"
