[package]
name = "urchin-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
urchin-core = { path = "../urchin-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true }
