[package]
name    = "urchin-vault"
version = "0.3.2"
edition = "2021"

[dependencies]
urchin-core = { path = "../urchin-core" }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
